--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -9,6 +9,10 @@ RUN mkdir -p /root/.ssh
 ADD config/ssh /root/.ssh/config
 RUN chmod 600 /root/.ssh/config
 
+# Install Bash.
+RUN apk add --update --no-cache bash && \
+  rm -rf /var/lib/apt/lists/*
+
 # Install docman.
 RUN apk add --update --no-cache ruby \
   && rm -rf /var/cache/apk/* \
