--- a/full/Dockerfile
+++ b/full/Dockerfile
@@ -9,6 +9,4 @@ RUN apk add --update --no-cache nodejs nodejs-dev \
   && grunt --version
 
 # Install compass.
-RUN apk add --update --no-cache ruby-dev build-base libffi-dev \
-  && rm -rf /var/cache/apk/* \
-  && gem install --no-ri --no-rdoc compass
+RUN gem install --no-ri --no-rdoc compass
