Remove json, keep build deps.

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -16,5 +16,5 @@ RUN apk add --update --no-cache bash && \
 # Install docman.
 RUN apk add --update --no-cache ruby ruby-dev build-base libffi-dev \
   && rm -rf /var/cache/apk/* \
-  && gem install --no-ri --no-rdoc json specific_install \
+  && gem install --no-ri --no-rdoc specific_install \
   && gem specific_install https://github.com/Adyax/docman.git develop
